2008-10-03  Alper KANAT  <alperkanat@gmail.com>

	* LICENSE and all files: raptiye is now licensed with GPLv3..
	* media/images/ff_horizontal.png, media/js/ff.js, media/css/style.css,
	templates/frontpage/base.html, templates/users/profile.html: added a new js
	module for firefox advertisement.. ibox and jquery dependencies are
	mandatory but I can drop them due to some user requests.. (ibox would be
	really hard..) ibox dependency is moved to the whole parts of the site since
	the ad shows up in every page..

2008-10-01  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/detail.html: forgot this part of the page..
	* media/js/tiny_mce/textarea.js: fixed bug about tinymce converting urls to
	relative..
	* blog/feeds.py, blog/urls.py, blog/views.py, extra/tag_cloud.py,
	tags/admin.py, tags/models.py, templates/blog/homepage.html,
	templates/blog/tags.html: tags are slugified (urlized) now.. this will solve
	the rss related problems for tags and more.. there are also some changes in
	the db scheme for tags table..

2008-09-30  Alper KANAT  <alperkanat@gmail.com>

	* polls/templatetags/poll_filters.py: fixed a bug..
	* blog/feeds.py: fixed a bug.. actually this is a stupid implementation..
	* blog/templatetags/blog_filters.py: fixed a typo..
	* tagged: Version 1.0

2008-09-29  Alper KANAT  <alperkanat@gmail.com>

	* migrated to bazaar instead of subversion.. therefore updated some
	corrupted symlinks and some permissions..
	* .htaccess: deleted this file since i'm moving to nginx..

2008-09-24  Alper KANAT  <alperkanat@gmail.com>

	* extra/captcha.py, users/views.py: controlling captcha for non ASCII
	characters.. must use forms api in the future..
	* comments/views.py: anonymous users don't have to enter a web site..
	* templates/feeds/latest_description.html: left the truncate job to
	feedburner.. this way raptiye don't care about how long the blog post is and
	pushes the whole entry to the rss..