@@ -1,3 +1,5 @@
+{% extends "admin/base.html" %}
+
 {% comment %}
 raptiye
 Copyright (C)  Alper KANAT  <alperkanat@raptiye.org>
@@ -16,7 +18,6 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
 
-{% extends "admin/base.html" %}
 {% load i18n %}
 
 {% block title %}raptiye | Yönetim Arayüzü{% endblock %}
