@@ -1,3 +1,5 @@
+{% extends "frontpage/base.html" %}
+
 {% comment %}
 raptiye
 Copyright (C)  Alper KANAT  <alperkanat@raptiye.org>
@@ -15,8 +17,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
-
-{% extends "frontpage/base.html" %}
 
 {% block title %}kayıt@{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}
 
